# Tri-Loop-Adaptive

./: .gitignore  CITATION.cff  LICENSE  README.md
data/processed/: madiun_profile_berawan.csv  madiun_profile_berawan_p10.csv  madiun_profile_berawan_p90.csv  madiun_profile_cerah.csv  madiun_profile_cerah_p10.csv  madiun_profile_cerah_p90.csv  madiun_profile_hujan.csv  madiun_profile_hujan_p10.csv  madiun_profile_hujan_p90.csv
data/simulink_ref/: julia_s1_C4.csv  julia_s3_C4.csv  matlab_s1_C4.csv  matlab_s3_C4.csv
docs/: paper1_v1.0_patch.md  spec_simulink.md  validation_simulink.md
julia/: Project.toml
julia/src/: PVBessVIC.jl  compare_simulink_vs_julia.jl  export_to_csv.jl
julia/test/: runtests.jl
matlab/: README.md  control_logic.m  pv_bess_vic_params.m  run_pure_validation.m  simulate_baseline_pure.m
matlab/functions/: adaptive_coord.m  bess_supervisor.m  mppt_po.m  single_diode_iv.m  swing_equation.m  vic_adaptive.m
matlab/validation/: README.md  julia_reference.csv
papers/q1_tri_loop/: Makefile  README.md  appendix_a_simulink.tex  main.tex  references.bib  supplement.tex
python/: pyproject.toml
python/notebooks/: analyze_mc.py  audit_robustness.py  build_comparative_table.py  build_madiun_profiles.py  compare_simulink_vs_julia.py  export_julia_to_csv.py  fft_limit_cycle.py  plot_all_scenarios.py  plot_s1.py  plot_s6_madiun.py  plot_small_signal.py
python/src/pvbessvic_py/: __init__.py  bmkg_loader.py  jld2_loader.py  nasapower_loader.py  plotting.py
results/processed/: comparative_table.md  comparative_table.tex  eigenvalue_locus.csv  (+8 more)
(+27 files in other folders)
