[project]
name = "pvbessvic-py"
version = "0.1.0"
description = "Post-processing & data tooling for PV-BESS-VIC research"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "scipy>=1.13",
  "matplotlib>=3.8",
  "scienceplots>=2.1",
  "pandas>=2.2",
  "h5py>=3.10",
  "requests>=2.31",
  "tqdm>=4.66",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
